--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <div class="header__logo">
-          <img src="./images/__icon.ico" alt="icon" class="logo__icon" />
-
-          <img
-          src="./images/Group 12.png" alt="name"
-          class="logo__name">
-
-          </h2>
-        </div>
+        <img src="./images/logo.png" alt="icon" class="header__logo" />
       </header>
       <main class="content">
         <section class="lead">
@@ -30,11 +22,7 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </h2>
-          <img
-          src= "./images/__image.jpg"
-          alt="image"
-          class="lead__image"
-           />
+          <img src="./images/__image.jpg" alt="image" class="lead__image" />
         </section>
         <section class="intro">
           <h2 class="intro__title">
