--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="De Pátria para Pátria" />
     <meta name="author" content="Alessandra Salviano" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="keywords" content="HTML, CSS" />
     <title>Art Gallery</title>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
