--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </h2>
-          <img src="./images/__image.jpg" alt="image" class="lead__image" />
+          <img src="./images/image.jpg" alt="image" class="lead__image" />
         </section>
         <section class="intro">
           <h2 class="intro__title">
