corrigir largura content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </main>
 
       <footer class="footer">
-        <p class="footer__copyright">&copy; 2025 Alessandra Salviano</p>
+        <p class="footer__copyright">&copy; 2025. Alessandra Salviano</p>
       </footer>
     </div>
   </body>
