--- a/index.html
+++ b/index.html
@@ -45,6 +45,230 @@
             estamos felizes por você ser nosso vizinho.
           </p>
         </section>
+
+        <section class="photo-grid">
+          <img
+            src="./images/photo-grid__item-1.png"
+            alt="item-1"
+            class="photo-grid__item"
+          />
+
+          <img
+            src="./images/photo-grid__item-2.png"
+            alt="item-2"
+            class="photo-grid__item"
+          />
+
+          <img
+            src="./images/photo-grid__item-3.png"
+            alt="item-3"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid__item-4.png"
+            alt="item-4"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid__item-5.png"
+            alt="item-5"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid__item-6.png"
+            alt="item-6"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid__item-7.png"
+            alt="item-7"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid__item-8.png"
+            alt="item-8"
+            class="photo-grid__item"
+          />
+        </section>
+
+        <section class="places">
+          <div class="places__item">
+            <h2 class="places__title">Criccieth, País de Gales</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artistas</p>
+              <p class="places__artist">Steffan Warren, editor-chefe</p>
+              <p class="places__artist">
+                Kseniya Glagoleva, gerente de projeto
+              </p>
+            </div>
+            <img
+              src="./images/place__image-1.png"
+              alt="image-1"
+              class="places__image"
+            />
+            <div class="places__text">
+              <p class="places__paragraph">
+                A ruína medieval do Castelo de Cricieth tem vista para a cidade
+                abaixo de uma rocha que se projeta para o mar. Acredita-se que
+                tenha sido construído por Llewelyn, o Grande, no século XIII.
+                Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas
+                margens de Snowdonia* tornou-se um destino turístico popular
+                durante os meses de verão.
+              </p>
+
+              <p class="places__paragraph">
+                A uma curta caminhada da estrada do castelo, você pode desfrutar
+                do melhor sorvete do mundo no Cadwalader's, cujo ingrediente
+                secreto, segundo rumores, são algas marinhas de origem local.
+                Outra reivindicação à fama é o fato de que Criccieth ganhou o
+                prêmio *Wales in Bloom* por cinco anos consecutivos por suas
+                espetaculares exibições florais pela cidade. Foi também a casa
+                de David Lloyd George, o único galês a ocupar o cargo de
+                primeiro-ministro do Reino Unido.
+              </p>
+            </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="places__button"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+
+          <div class="places__item">
+            <h2 class="places__title">Berea, EUA</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="places__artist">Travis Turner, autor e editor</p>
+            </div>
+            <img
+              src="./images/place__image-2.png"
+              alt="image-2"
+              class="places__image"
+            />
+            <div class="places__text">
+              <p class="places__paragraph">
+                Berea é uma pequena cidade localizada na parte central do
+                Kentucky. A cidade é cercada por belas florestas e campos. É
+                conhecida como a capital do artesanato do estado, e os
+                visitantes encontrarão muitas oportunidades de compras: lojas
+                com bijuterias artesanais, velas, artigos de madeira, galerias,
+                ateliês de vidro e muito mais. A cidade realiza um festival
+                anual que celebra o "pão de colher", um prato local feito com
+                pão de milho e servido com uma colher de pau.
+              </p>
+
+              <p class="places__paragraph">
+                No entanto, provavelmente é mais conhecido pela faculdade local.
+                O Berea College foi fundado em 1855 e foi o primeiro colégio no
+                sul a ser racialmente integrado, bem como o primeiro a ser
+                misto. De forma um tanto singular, não cobra mensalidades - todo
+                aluno recebe uma bolsa de estudos integral.
+              </p>
+            </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="places__button"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+
+          <div class="places__item">
+            <h2 class="places__title">Muramvya, Burundi</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
+            </div>
+            <img
+              src="./images/place__image-3.png"
+              alt="image-3"
+              class="places__image"
+            />
+            <div class="places__text">
+              <p class="places__paragraph">
+                Muramvya é uma das 18 províncias de Burundi. Na era do reino,
+                Muramvya era a capital real e em 2007, por causa de sua paisagem
+                cultural e natural, foi adicionada à Lista Provisória do
+                Patrimônio Mundial da UNESCO. Está localizada no centro de
+                Burundi, entre as capitais políticas e econômicas do país.
+              </p>
+
+              <p class="places__paragraph">
+                O clima é bastante frio à noite, mas durante o dia, você
+                pensaria que está no céu. A 2.665 metros (8.743 pés) acima do
+                nível do mar, o Monte Teza é um dos lugares mais frios da
+                província. Mas essa brisa fresca permite uma das maiores
+                plantações de chá e café do país, que representam a maior parte
+                das exportações do Burundi.
+              </p>
+
+              <p class="places__paragraph">
+                O Parque Nacional de Kibira, uma das maiores reservas de vida
+                selvagem para macacos, se sobrepõe a quatro províncias,
+                incluindo Muramvya. Este Parque Nacional encontra-se no ápice
+                das belas montanhas do Congo-Nile Divide, variando entre 1.550 e
+                2.660 metros de altitude. Está repleta de uma bela vegetação e
+                fonte para os vários rios e riachos que fornecem água em todo o
+                país.
+              </p>
+            </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="places__button"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+
+          <div class="places__item">
+            <h2 class="places__title">Uberlândia, MG</h2>
+            <div class="places__website">
+              <p class="places__url-heading">Artista</p>
+              <p class="places__artist">
+                Alessandra Salviano, desenvolvedor web
+              </p>
+            </div>
+            <img
+              src="./images/place__image-4.jpg"
+              alt="image-4"
+              class="places__image"
+            />
+            <div class="places__text">
+              <p class="places__paragraph">
+                Uberlândia, localizada no Triângulo Mineiro, foi fundada
+                oficialmente em 1888, mas sua ocupação começou antes, com
+                fazendas e tropeiros que passavam pela região. Inicialmente
+                chamada de São Pedro de Uberabinha, a cidade cresceu rapidamente
+                devido ao agronegócio e à posição estratégica entre São Paulo,
+                Goiás e o restante de Minas Gerais. Hoje, é um dos principais
+                polos econômicos do interior do Brasil.
+              </p>
+
+              <p class="places__paragraph">
+                Uberlândia tem um clima tropical de savana, com duas estações
+                bem definidas. O verão (outubro a março) é quente e úmido, com
+                temperaturas acima de 30°C e chuvas frequentes. Já o inverno
+                (abril a setembro) é seco, com dias agradáveis e noites mais
+                frias, podendo chegar a 10°C. A cidade tem muitos dias
+                ensolarados ao longo do ano, com brisas suaves que ajudam a
+                manter o clima mais ameno.
+              </p>
+
+              <p class="places__paragraph">
+                O Praia Clube é um dos principais centros de lazer e esporte de
+                Uberlândia. Fundado em 1935, cresceu de um clube recreativo para
+                um dos maiores do Brasil. Com infraestrutura completa, oferece
+                piscinas, quadras, academias e áreas de lazer, além de sediar
+                torneios esportivos. Seu time de vôlei feminino é destaque na
+                Superliga. Além do esporte, o clube é um ponto de encontro
+                tradicional para famílias e eventos na cidade.
+              </p>
+            </div>
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="places__button"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
