--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="places__item">
             <h2 class="places__title">Criccieth, País de Gales</h2>
             <div class="places__website">
-              <p class="places__url-heading">Artistas</p>
+              <p class="places__artists">Artistas</p>
               <p class="places__artist">Steffan Warren, editor-chefe</p>
               <p class="places__artist">
                 Kseniya Glagoleva, gerente de projeto
@@ -137,7 +137,7 @@
           <div class="places__item">
             <h2 class="places__title">Berea, EUA</h2>
             <div class="places__website">
-              <p class="places__url-heading">Artista</p>
+              <p class="places__artists">Artista</p>
               <p class="places__artist">Travis Turner, autor e editor</p>
             </div>
             <img
@@ -175,7 +175,7 @@
           <div class="places__item">
             <h2 class="places__title">Muramvya, Burundi</h2>
             <div class="places__website">
-              <p class="places__url-heading">Artista</p>
+              <p class="places__artists">Artista</p>
               <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
             </div>
             <img
@@ -221,7 +221,7 @@
           <div class="places__item">
             <h2 class="places__title">Uberlândia, MG</h2>
             <div class="places__website">
-              <p class="places__url-heading">Artista</p>
+              <p class="places__artists">Artista</p>
               <p class="places__artist">
                 Alessandra Salviano, desenvolvedor web
               </p>
