Finalizar parte 2 projeto

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
 
           <div class="places__item">
-            <h2 class="places__title">Uberlândia, MG</h2>
+            <h2 class="places__title">Uberlândia, Minas Gerais</h2>
             <div class="places__website">
               <p class="places__artists">Artista</p>
               <p class="places__artist">
