corrigir nomes alt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.png" alt="icon" class="header__logo" />
+        <img src="./images/logo.png" alt="logo header" class="header__logo" />
       </header>
       <main class="content">
         <section class="lead">
@@ -22,7 +22,11 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </h2>
-          <img src="./images/image.jpg" alt="image" class="lead__image" />
+          <img
+            src="./images/image.jpg"
+            alt="paisagem lead"
+            class="lead__image"
+          />
         </section>
         <section class="intro">
           <h2 class="intro__title">
@@ -49,44 +53,44 @@
         <section class="photo-grid">
           <img
             src="./images/photo-grid__item-1.png"
-            alt="item-1"
+            alt="Vila costeira com mar"
             class="photo-grid__item"
           />
 
           <img
             src="./images/photo-grid__item-2.png"
-            alt="item-2"
+            alt="Vila costeira com céu azul"
             class="photo-grid__item"
           />
 
           <img
             src="./images/photo-grid__item-3.png"
-            alt="item-3"
+            alt="Igreja com cúpulas"
             class="photo-grid__item"
           />
           <img
             src="./images/photo-grid__item-4.png"
-            alt="item-4"
+            alt="Cidade com pontes sobre o rio"
             class="photo-grid__item"
           />
           <img
             src="./images/photo-grid__item-5.png"
-            alt="item-5"
+            alt="Campo com vegetação"
             class="photo-grid__item"
           />
           <img
             src="./images/photo-grid__item-6.png"
-            alt="item-6"
+            alt="Área de jardim com arbustos e árvores"
             class="photo-grid__item"
           />
           <img
             src="./images/photo-grid__item-7.png"
-            alt="item-7"
+            alt="Casa com telhado de palha"
             class="photo-grid__item"
           />
           <img
             src="./images/photo-grid__item-8.png"
-            alt="item-8"
+            alt="Casas rurais em área montanhosa com vegetação"
             class="photo-grid__item"
           />
         </section>
@@ -103,7 +107,7 @@
             </div>
             <img
               src="./images/place__image-1.png"
-              alt="image-1"
+              alt="vista costeira País de Gales"
               class="places__image"
             />
             <div class="places__text">
@@ -142,7 +146,7 @@
             </div>
             <img
               src="./images/place__image-2.png"
-              alt="image-2"
+              alt="Rua de Berea EUA"
               class="places__image"
             />
             <div class="places__text">
@@ -180,7 +184,7 @@
             </div>
             <img
               src="./images/place__image-3.png"
-              alt="image-3"
+              alt="Monumento Muramvya"
               class="places__image"
             />
             <div class="places__text">
@@ -228,7 +232,7 @@
             </div>
             <img
               src="./images/place__image-4.jpg"
-              alt="image-4"
+              alt="Praia Clube de Uberlândia"
               class="places__image"
             />
             <div class="places__text">
